# intererg

./: Makefile.am  Readme.md
include/relacs/erg/: ledarray.h  lightramp.h  offramp.h  patch2led.h  simpleerg.h  triggerdetector.h
include/relacs/intererg/: ledarray.h  lightramp.h  offramp.h  patch2led.h  simpleerg.h  triggerdetector.h
src/: Makefile.am  ledarray.cc  lightramp.cc  offramp.cc  patch2led.cc  simpleerg.cc  triggerdetector.cc
